@@ -2192,10 +2192,12 @@ IMPORTANT: please read docs/tech/tn0016.txt before modifying this file!
 <set var="ADVANCED_MAC_SRC" hints="files">
     src/mac/carbon/joystick.cpp
     src/mac/carbon/sound.cpp
+    src/mac/carbon/taskbar.cpp
 </set>
 <set var="ADVANCED_MAC_HDR" hints="files">
     wx/mac/carbon/joystick.h
     wx/mac/carbon/sound.h
+    wx/mac/carbon/taskbarosx.h
 </set>
 
 <set var="ADVANCED_OS2_SRC" hints="files">
